Bug: arrowRig block, adding background-image and need to realign

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,6 +36,7 @@ body{
   max-width: 60rem;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 svg{
@@ -69,6 +70,7 @@ svg{
   background-repeat: no-repeat;
   background-size:cover;
   background-position:50%, 50%;
+  position:absolute;
   /* position: relative;
   z-index: -100; */
 }
